adding compile plugin